--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "docx": "^4.7.0",
     "moment": "^2.23.0",
     "node-xlsx": "^0.12.1",
-    "pdfmake": "^0.1.40"
+    "pdfmake": "^0.1.40",
+    "ramda": "^0.26.1"
   },
   "devDependencies": {
     "standard": "^12.0.1"
